Change background to image and update styles
Updated background style and added image for enhanced visual appeal.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
   <title>For My Lulumma ❤️</title>
   <meta charset="UTF-8">
   <style>
-    body {
+    body 
+    {
+             background-image: url('redrose.jpg'); 
+             background-size: cover; 
+             background-position: center; 
+             background-repeat: no-repeat; 
+             height: 100vh; 
+             margin: 0;
+    }
+    /* {
       margin: 0;
       font-family: 'Georgia', serif;
       background: linear-gradient(to bottom, #f8e8e8, #ffffff);
       color: #4a2c2a;
       text-align: center;
-    }
+    } */
 
     .container {
       padding: 80px 20px;
@@ -115,3 +124,4 @@
 
 </body>
 </html>
+
